[FE] feat: 레이아웃 컴포넌트 추가/제거 기능 구현

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -34,3 +34,12 @@
   background-color: green;
 }
 
+.display_none {
+  display: none;
+}
+
+.display_flex {
+  background-color: lightgray;
+  display: flex;
+}
+
