--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,9 @@
 }
 
 body {
-  background-color: #f8f8f8;
+  background-color: #f9fcff;
   margin: 0;
+  font-family: "Pretendard-Regular";
   /* margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
