--- a/frontend/src/components/css/Text.module.css
+++ b/frontend/src/components/css/Text.module.css
@@ -23,6 +23,11 @@
   font-weight: 400;
 }
 
+.textTitleBold {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
 .pageTitle {
   font-size: 2rem;
   font-weight: 400;
