--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -43,3 +43,63 @@
   display: flex;
 }
 
+/* -------------------------------------------- */
+.info_container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.inputTag {
+  display: grid;
+  grid-template-columns: 150px 300px;
+  margin: 10px;
+} 
+
+.textPadding{
+  padding: 30px 20px 30px 20px;
+}
+.textMargin {
+  margin: 20px;
+}
+
+.profile_img {
+  width: 250px;
+  height: 250px; 
+  background-color: #F5F5F5; 
+  border-radius: 50%;
+  margin: auto;
+  position: relative;
+}
+
+.profile_editBtn {
+  box-sizing: border-box;
+
+  position: absolute;
+  width: 82.02px;
+  height: 36.58px;
+  left: 180px;
+  top: 200px;
+  
+  background: #FFFFFF;
+  border: 2px solid #E8E8E8;
+  border-radius: 10px;
+
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  /* padding-left: 10px; */
+  
+  cursor: pointer;
+}
+
+.profile_editBtn_icon{
+  width: 20px;
+  height: 20px;
+  padding-left: 10px;
+}
+
+.profile_editBtn_text{
+  text-align: left;
+}
+
+
