--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -43,6 +43,13 @@
   display: flex;
 }
 
+.hr{
+  width: 100%;
+  height: 0.05rem;
+  background-color: lightgray;
+  margin: 0 20px 0 20px;
+}
+
 /* -------------------------------------------- */
 .info_container {
   display: grid;
