--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -47,7 +47,10 @@
   width: 100%;
   height: 0.05rem;
   background-color: lightgray;
-  margin: 0 20px 0 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  box-sizing: border-box;
+  
 }
 
 /* -------------------------------------------- */
@@ -110,3 +113,50 @@
 }
 
 
+/* -------------------------------------- */
+
+.githubContainer{
+  display: flex;
+  /* justify-content: center; */
+}
+
+.githubBox{
+  display: flex;
+  align-items: center;
+  
+  width: 100%;
+  height: 157px;
+  margin: 10px;
+  background-color: #FFFFFF;
+  box-shadow: 0px 2px 29px rgba(0, 0, 0, 0.07), 0px 0.630668px 6.47753px rgba(0, 0, 0, 0.0417275), 0px 0.290021px 1.92853px rgba(0, 0, 0, 0.0282725);
+}
+
+.githubProfileImg{
+  width: 110px;
+  height: 110px;
+  margin-left: 50px;
+
+  border-radius: 50%;
+  background: #FFFFFF;
+  box-shadow: 0px -2px 80px rgba(0, 0, 0, 0.08), 0px -0.446726px 17.869px rgba(0, 0, 0, 0.0476886), 0px -0.133002px 5.32008px rgba(0, 0, 0, 0.0323114);
+}
+
+.githubProfileTexts{
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+
+  margin-left: 30px;
+}
+
+.githubProfileText {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.githubProfileLogout{
+  width: 50%;
+  text-align: right;
+  padding-right: 50px;
+  box-sizing: border-box;
+}
