--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,12 @@
 @font-face {
   font-family: "Pretendard-Regular";
-  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
-    format("woff");
+  src: url("https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff") format("woff");
   font-weight: 400;
   font-style: normal;
 }
 
 body {
-  background-color: #f9fcff;
+  /* background-color: #f9fcff; */
   margin: 0;
   font-family: "Pretendard-Regular";
   /* margin: 0;
