--- a/frontend/src/features/blog/Blog.module.css
+++ b/frontend/src/features/blog/Blog.module.css
@@ -26,3 +26,32 @@
     justify-content: center;
     height: 45%;
 }
+
+.BlogResetBox {
+    width: 43%;
+    max-width: 600px;
+    border: 0.5px solid #464646;
+    box-shadow: 0px 0px 8px 1px rgb(0 0 0 / 20%);
+    border-radius: 20px;
+    padding: 40px 20px;
+}
+
+.BlogResetImgDiv {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    overflow: hidden;
+    padding: 20px 0px;
+}
+
+.BlogResetImgDiv>img {
+    width: 100%;
+    max-height: 250px;
+    height: auto;
+    object-fit: contain;
+}
+
+.line {
+    border-left: 1px dashed #000000;
+    height: 500px;
+}
