[FE] feat: 카테고리 추가 기능 구현

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -183,6 +183,7 @@
   align-items: center;
   background-color: white;
   padding: 0;
+  height: 100%;
 }
 
 .gridAddButton{
@@ -200,6 +201,11 @@
 }
 
 .gridAddButton_icon{
+  text-align: center;
+}
+
+.nonCategory {
+  margin: 20px;
   text-align: center;
 }
 
