--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -61,14 +61,14 @@
 
 .inputTag {
   display: grid;
-  grid-template-columns: 150px 300px;
+  grid-template-columns: 100px 250px;
   margin: 10px;
   width: 100%;
 } 
 
 .inputTagThree{
   display: grid;
-  grid-template-columns: 150px 150px 30.3vw;
+  grid-template-columns: 100px 150px 30.3vw;
   margin: 10px;
   width: 100%;
 }
@@ -132,7 +132,7 @@
   display: flex;
   align-items: center;
   
-  width: 100%;
+  /* width: 100%; */
   height: 157px;
   margin: 10px;
   background-color: #FFFFFF;
@@ -174,7 +174,6 @@
 .gridContainer {
   margin: 20px;
   padding: 4px;
-  width: 100%;
   background-color: #F6F4F9;
 }
 
