--- a/frontend/src/components/css/Header.module.css
+++ b/frontend/src/components/css/Header.module.css
@@ -6,6 +6,10 @@
   justify-content: space-between;
   background-color: transparent;
   z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 img {
