--- a/frontend/src/features/blog/Blog.module.css
+++ b/frontend/src/features/blog/Blog.module.css
@@ -1,7 +1,7 @@
 .Box {
     display: flex;
-    width: 700px;
-    height: 500px;
+    width: 650px;
+    height: 450px;
     flex-direction: column;
     align-items: center;
     background: #FFFFFF;
@@ -40,6 +40,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
+    max-height: 250px;
     overflow: hidden;
     padding: 20px 0px;
 }
@@ -54,4 +55,27 @@
 .line {
     border-left: 1px dashed #000000;
     height: 500px;
+}
+
+.GatsbyCardBox {
+ filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
+}
+.GatsbyCardBox:hover {
+    border: 3px solid #766aff;
+    border-radius: 7px;
+}
+
+.GatsbyCardBox>img {
+    width: 100%;
+    height: auto;
+    max-height: 24vh;
+    object-fit: cover;
+    object-position: left top;
+    filter: blur(0.5px);
+    border-radius: 7px 7px 0px 0px;
+}
+
+.GatsbyCardText {
+    border-radius: 0px 0px 7px 7px;
+    padding: 4px 8px;
 }
