--- a/frontend/src/features/blog/Blog.module.css
+++ b/frontend/src/features/blog/Blog.module.css
@@ -30,7 +30,6 @@
 .BlogResetBox {
     min-width: 485px;
     max-width: 600px;
-    /* height: 500px; */
     border: 0.5px solid #464646;
     box-shadow: 0px 0px 8px 1px rgb(0 0 0 / 20%);
     border-radius: 20px;
@@ -61,8 +60,15 @@
     height: 500px;
 }
 
+.inputValue:checked+.GatsbyCardBox {
+    border: 3px solid #766aff;
+    border-radius: 7px;
+}
+
 .GatsbyCardBox {
     filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.25));
+    border: 3px solid transparent;
+    border-radius: 7px;
 }
 
 .GatsbyCardBox:hover {
