--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -2,10 +2,11 @@
 
 .layoutContainer {
   display:flex;
-  width: 100%;
+  /* width: 100%; */
   height: 110px;
   /* padding: 5px; */
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 
   flex-direction: column;
   flex-wrap: wrap;
@@ -21,6 +22,37 @@
   display: none;
 }
 
+
+.layoutSelectContainer{
+  display: grid;
+  grid-template-columns: 0.8fr 2.2fr;
+
+  width: 100%;
+  margin-top: 20px;
+}
+
+.checkListContainer {
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #ECECEC;
+}
+
+.checkListTitle {
+  /* text-align: center; */
+  display: flex;
+  align-items: center;
+  padding: 10px 10px 10px 20px;
+  background-color: #F6F4F9;
+}
+
+.checkListContents {
+  padding: 20px;
+  padding-bottom: 5px;
+}
+
+.checkListItem {
+  margin-bottom: 15px;
+}
 
 .box1 {
   width: 100px;
@@ -46,8 +78,12 @@
 }
 
 .display_flex {
-  background-color: lightgray;
-  display: flex;
+  background-color: #D3D3EB;
+  /* display: flex; */
+  /* padding: 10px; */
+  margin: 5px;
+  width: 100px;
+  height: 500vh;
 }
 
 .hr{
@@ -227,4 +263,3 @@
 }
 
 /* ---------------------------------- */
-
