--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -1,7 +1,7 @@
 /* 레이아웃 ---------------------------------- */
 
 .layoutContainer {
-  display:flex;
+  display: flex;
   /* width: 100%; */
   height: 110px;
   /* padding: 5px; */
@@ -13,8 +13,7 @@
   overflow-x: scroll;
   overflow-y: hidden;
   background-color: white;
-  border: 1px solid #ECECEC;
-
+  border: 1px solid #ececec;
 }
 
 /* 스크롤 숨기기 */
@@ -22,8 +21,7 @@
   display: none;
 }
 
-
-.layoutSelectContainer{
+.layoutSelectContainer {
   display: grid;
   grid-template-columns: 0.8fr 2.2fr;
 
@@ -34,7 +32,7 @@
 .checkListContainer {
   display: flex;
   flex-direction: column;
-  border: 2px solid #ECECEC;
+  border: 2px solid #ececec;
 }
 
 .checkListTitle {
@@ -42,7 +40,7 @@
   display: flex;
   align-items: center;
   padding: 10px 10px 10px 20px;
-  background-color: #F6F4F9;
+  background-color: #f6f4f9;
 }
 
 .checkListContents {
@@ -57,7 +55,7 @@
 .box1 {
   width: 100px;
   height: 100%;
-  background-color: #ECECEC;
+  background-color: #ececec;
   margin: 5px;
 }
 
@@ -77,23 +75,37 @@
   display: none;
 }
 
+.display_logo,
+.display_title,
+.display_category,
+.display_navi {
+  background-color: #d3d3eb;
+  margin: 5px;
+}
+
+.display_logo {
+  height: 60px;
+}
+
+.display_title {
+  height: 200px;
+}
+
 .display_flex {
-  background-color: #D3D3EB;
+  background-color: #d3d3eb;
   /* display: flex; */
   /* padding: 10px; */
   margin: 5px;
   width: 100px;
-  height: 500vh;
 }
 
-.hr{
+.hr {
   width: 100%;
   height: 0.05rem;
   background-color: lightgray;
   padding-left: 20px;
   padding-right: 20px;
   box-sizing: border-box;
-  
 }
 
 /* -------------------------------------------- */
@@ -107,16 +119,16 @@
   grid-template-columns: 100px 250px;
   margin: 10px;
   width: 100%;
-} 
+}
 
-.inputTagThree{
+.inputTagThree {
   display: grid;
   grid-template-columns: 100px 150px 30.3vw;
   margin: 10px;
   width: 100%;
 }
 
-.textPadding{
+.textPadding {
   padding: 30px 20px 30px 20px;
 }
 .textMargin {
@@ -125,8 +137,8 @@
 
 .profile_img {
   width: 250px;
-  height: 250px; 
-  background-color: #F5F5F5; 
+  height: 250px;
+  background-color: #f5f5f5;
   border-radius: 50%;
   margin: auto;
   position: relative;
@@ -140,59 +152,60 @@
   height: 36.58px;
   left: 180px;
   top: 200px;
-  
-  background: #FFFFFF;
-  border: 2px solid #E8E8E8;
+
+  background: #ffffff;
+  border: 2px solid #e8e8e8;
   border-radius: 10px;
 
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   /* padding-left: 10px; */
-  
+
   cursor: pointer;
 }
 
-.profile_editBtn_icon{
+.profile_editBtn_icon {
   width: 20px;
   height: 20px;
   padding-left: 10px;
 }
 
-.profile_editBtn_text{
+.profile_editBtn_text {
   text-align: left;
 }
 
-
 /* -------------------------------------- */
 
-.flexContainer{
+.flexContainer {
   display: flex;
   flex-direction: column;
 }
 
-.githubBox{
+.githubBox {
   display: flex;
   align-items: center;
-  
+
   /* width: 100%; */
   height: 157px;
   margin: 10px;
-  background-color: #FFFFFF;
-  box-shadow: 0px 2px 29px rgba(0, 0, 0, 0.07), 0px 0.630668px 6.47753px rgba(0, 0, 0, 0.0417275), 0px 0.290021px 1.92853px rgba(0, 0, 0, 0.0282725);
+  background-color: #ffffff;
+  box-shadow: 0px 2px 29px rgba(0, 0, 0, 0.07), 0px 0.630668px 6.47753px rgba(0, 0, 0, 0.0417275),
+    0px 0.290021px 1.92853px rgba(0, 0, 0, 0.0282725);
 }
 
-.githubProfileImg{
+.githubProfileImg {
   width: 110px;
   height: 110px;
   margin-left: 50px;
 
   border-radius: 50%;
-  background: #FFFFFF;
-  box-shadow: 0px -2px 80px rgba(0, 0, 0, 0.08), 0px -0.446726px 17.869px rgba(0, 0, 0, 0.0476886), 0px -0.133002px 5.32008px rgba(0, 0, 0, 0.0323114);
+  background: #ffffff;
+  box-shadow: 0px -2px 80px rgba(0, 0, 0, 0.08), 0px -0.446726px 17.869px rgba(0, 0, 0, 0.0476886),
+    0px -0.133002px 5.32008px rgba(0, 0, 0, 0.0323114);
 }
 
-.githubProfileTexts{
+.githubProfileTexts {
   display: flex;
   flex-direction: column;
   width: 30%;
@@ -205,7 +218,7 @@
   padding-bottom: 5px;
 }
 
-.githubProfileLogout{
+.githubProfileLogout {
   width: 50%;
   text-align: right;
   padding-right: 50px;
@@ -217,10 +230,10 @@
 .gridContainer {
   margin: 20px;
   padding: 4px;
-  background-color: #F6F4F9;
+  background-color: #f6f4f9;
 }
 
-.gridCategoryItem{
+.gridCategoryItem {
   display: flex;
   align-items: center;
   background-color: white;
@@ -228,13 +241,13 @@
   height: 100%;
 }
 
-.gridAddButton{
+.gridAddButton {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 43px;
   margin: 5px;
-  border: 1px solid #E0E0E0;
+  border: 1px solid #e0e0e0;
   cursor: pointer;
 }
 
@@ -242,7 +255,7 @@
   background-color: white;
 }
 
-.gridAddButton_icon{
+.gridAddButton_icon {
   text-align: center;
 }
 
@@ -251,9 +264,8 @@
   text-align: center;
 }
 
-
 /* ---------------------------------- */
-.confirmButton{
+.confirmButton {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -262,4 +274,12 @@
   padding: 20px;
 }
 
-/* ---------------------------------- */
+/* 세부 설정 ---------------------------------- */
+.detailContents {
+  display: flex;
+  flex-direction: column;
+}
+
+.detailItem {
+  margin: 10px;
+}
