--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -9,13 +9,68 @@
   flex-direction: column;
 }
 
+.flexColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.flexRow {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .calendar {
   background-color: #393D96;
+  width: 100%;
+  height: 100%;
   color: white;
 }
 
-.avatarImg {
-  width: 150px;
-  height: 150px;
-  margin-bottom: 5px;
+.calendarInfoText {
+  margin: 15px 0px 25px 0px;
+}
+
+.calendarDiv {
+  width: 100%;
+  background: #4A4DA8;
+  border-radius: 20px;
+  padding: 12px 12px;
+  margin: 2px 0px;
+}
+
+.preview {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.previewIframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  border: 0px;
+  overflow: hidden;
+}
+
+.previewInfo {
+  position: absolute;
+  width: 100%;
+  background: rgba(231, 231, 231, 0.6);
+  border-radius: 0px 0px 30px 30px;
+  bottom: 0;
+  align-items: center;
+}
+
+.previewInfo>div {
+  padding: 5px 30px;
 }
