--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -123,12 +123,34 @@ iframe {
   padding: 10px;
 }
 
+.infoVolume {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.infoVolume>.icon {
+  padding: 0px 6px 0px 15px;
+  font-size: 1rem;
+}
+
+
 .infoValue {
   display: flex;
   justify-content: center;
   align-items: center;
   background: #FFFFFF;
-  height: 135%;
+  height: 130%;
+  border-radius: 0px 0px 20px 20px;
+}
+
+.dateValue {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  background: #FFFFFF;
+  height: 100%;
   border-radius: 0px 0px 20px 20px;
 }
 
