--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -2,7 +2,6 @@
   border-radius: 30px;
   width: 100%;
   height: 100%;
-  border: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -155,3 +154,19 @@ iframe {
 }
 
 /* 페이지 이동 */
+.menuBox {
+  height: 20vh;
+  background-color: #E2E2F3;
+  border-radius: 20px;
+}
+
+.menuBox>div {
+ display: flex;
+ padding: 20px;
+}
+
+.menuText {
+  background: #FFFFFF;
+  border-radius: 10px;
+  padding: 10px 40px;
+}
