[FE] feat: 달력 디자인 수정

--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -41,9 +41,9 @@
   margin: 3px 0px;
 }
 
-/* .calendarDiv>div {
-  height: 32vh;
-} */
+.calendarDiv>div {
+  height: 36vh;
+}
 
 /* 블로그 바로가기 */
 .preview {
