[FE] modify: 게시글 중첩 라우터 파일 수정

--- a/frontend/src/features/post/Post.module.css
+++ b/frontend/src/features/post/Post.module.css
@@ -1,10 +1,11 @@
-/* PostPage */
-.postPage {
+/* PostRouterPage */
+.postRouterPage {
   margin-top: 5vh;
   margin-bottom: 5vh;
   position: relative;
 }
 
+/* PostPage */
 .postPageButtons {
   position: absolute;
   top: 20%;
