--- a/frontend/src/features/setting/layout/Layout.module.css
+++ b/frontend/src/features/setting/layout/Layout.module.css
@@ -254,6 +254,13 @@ a:focus {
 }
 
 /* ---------------------------------- */
-.display_flex {
+.display_col {
   display: flex;
+  flex-direction: column;
+}
+
+.title {
+  width: 100%;
+  height: 30vh;
+  background-color: #d1dce5;
 }
