--- a/frontend/src/features/post/PostWrite.module.css
+++ b/frontend/src/features/post/PostWrite.module.css
@@ -14,6 +14,13 @@
   transform: translate(-14%, 30%);
 }
 
+.postDeleteButton {
+  position: absolute;
+  top: -30%;
+  right: 7%;
+  transform: translate(7%, 30%);
+}
+
 /* PostWriteTitle */
 .postWriteTitle {
   position: absolute;
