--- a/frontend/src/features/landing/Landing.module.css
+++ b/frontend/src/features/landing/Landing.module.css
@@ -1,29 +1,20 @@
 .mainBox {
   width: 100%;
-  height: 88vh;
+  height: 84vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-}
-
-.landingMainDiv {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0px 80px;
+  justify-content: center;
 }
 
 .landingTextBox {
+  min-width: 350px;
   height: 100px;
   font-size: 2.625rem;
   text-align: left;
   font-weight: 600;
 }
 
-.landingMainImg {
-  width: 45%;
-  border: 0.1px solid rgb(216, 216, 216);
+.mainImg {
+  width: 100%;
   border-radius: 10px;
-  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.25));
 }
