--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -272,14 +272,8 @@
   padding: 20px;
 }
 
-.addButton {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin-left: 10px;
-  padding: 20px;
-  border: 2px solid gray;
+.addLinkBtn {
+  margin-left: 5px;
 }
 
 /* 세부 설정 ---------------------------------- */
@@ -290,4 +284,39 @@
 
 .detailItem {
   margin: 10px;
+}
+
+
+/* 링크 css  */
+.linkBox {
+  display: flex;
+  align-items: center;
+
+  width: 45vw ;
+  height: 40px;
+  border: 1px solid #ECECEC;
+  border-radius: 10px;
+  margin-bottom: 5px;
+}
+
+.linkBoxSite {
+  display: flex;
+  align-items: center;
+  width: 140px;
+  margin-right: 10px;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+
+.linkBoxLink {
+  width: 30.3vw;
+  padding-left: 10px;
+  box-sizing: border-box;
+}
+
+.socialIcon {
+  border: 100%;
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
 }
