[FE] feat: 세부 컴포넌트 색상 변경 테스트

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -74,10 +74,15 @@
   display: none;
 }
 
-.display_logo {
+.layout_nonColored,
+.layout_colored {
   margin: 10px;
   /* background-color: #d3d3eb; */
   border-radius: 5px;
+}
+
+.layout_colored {
+  background-color: #d3d3eb;
 }
 
 .icon {
