--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -105,7 +105,7 @@
   box-sizing: border-box;
 }
 
-/* -------------------------------------------- */
+/* 카테고리 -------------------------------------------- */
 .grid_container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -295,4 +295,20 @@
 
 .detailItem {
   margin: 10px;
+}
+
+.detailItemThree {
+  display: grid;
+  grid-template-columns: 40px 10vw 30px;
+  align-items: center;
+}
+
+.detailItemImgBtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.textInfo {
+  margin-left: 5px;
 }
