--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -84,6 +84,15 @@ iframe {
 }
 
 /* 최신글 보기 */
+.newPostContainer {
+  border-radius: 30px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
 .list {
   width: 100%;
   background-color: white;
@@ -99,7 +108,7 @@ iframe {
 }
 
 .listAll {
-  margin-bottom: 30px;
+  margin: 30px 0px;
 }
 
 .listOne {
