[FE] design: 게시글 삭제 버튼 css 수정

--- a/frontend/src/features/post/PostWrite.module.css
+++ b/frontend/src/features/post/PostWrite.module.css
@@ -17,8 +17,8 @@
 .postDeleteButton {
   position: absolute;
   top: -30%;
-  right: 7%;
-  transform: translate(7%, 30%);
+  right: 0;
+  transform: translate(115%, 30%);
 }
 
 /* PostWriteTitle */
