[FE] feat: 라디오 버튼 활성화

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -328,6 +328,14 @@
   height: 30px;
   margin-right: 10px;
 }
+
+/* 페이지 설정 */
+.pageOrder {
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
 .detailItemThree {
   display: grid;
   grid-template-columns: 40px 10vw 30px;
