[FE] design: 컴포넌트 설정 디자인 수정

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -291,8 +291,20 @@
   flex-direction: column;
 }
 
+.detailContainer {
+  padding: 0 0 10px 0;
+}
+
 .detailItem {
   margin: 10px;
+}
+
+.detailHr {
+  width: 100%;
+  height: 0.05rem;
+  background-color: lightgray;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 /* 링크 css  */
