[FE] feat: 세부 레이아웃 조회, 수정 API  연결

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -292,7 +292,7 @@
 }
 
 .detailContainer {
-  padding: 0 0 10px 0;
+  /* padding: 0 0 0px 0; */
 }
 
 .detailItem {
@@ -303,7 +303,6 @@
   width: 100%;
   height: 0.05rem;
   background-color: lightgray;
-  margin-top: 10px;
   margin-bottom: 10px;
 }
 
