--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -246,6 +246,27 @@
   background-color: white;
   padding: 0;
   height: 100%;
+  position: relative;
+}
+
+.gridCategoryEditBtn,
+.gridCategoryDeleBtn {
+  position: absolute;
+  border: 1px solid #e0e0e0;
+  padding: 5px 10px 5px 10px;
+  cursor: pointer;
+}
+
+.gridCategoryEditBtn {
+  right: 70px;
+}
+
+.gridCategoryDeleBtn {
+  right: 20px;
+}
+
+.gridCategorySaveBtn:hover {
+  background-color: #e0e0e0;
 }
 
 .gridAddButton {
