--- a/frontend/src/features/blog/Blog.module.css
+++ b/frontend/src/features/blog/Blog.module.css
@@ -142,3 +142,102 @@
 
     cursor: pointer;
 }
+
+/* -------------------------- */
+
+.background {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    display: block;
+    z-index: 3;
+    text-align: center;
+    overflow: hidden;
+}
+
+.background::before {
+    content: "";
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(2px);
+}
+
+.loading_container,
+.loading {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    border-radius: 50%;
+}
+
+.loading_container {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 5;
+    transform: translate(-50%, -50%);
+}
+
+.loading {
+    border: 2px solid transparent;
+    border-color: transparent #fff transparent #FFF;
+    animation: rotate-loading 2s linear 0s infinite normal;
+    transform-origin: 50% 50%;
+}
+
+.loading_text {
+    animation: loading-text-opacity 3s linear 0s infinite normal;
+    color: #ffffff;
+    font-size: 1.5rem;
+    font-weight: bold;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 5;
+    transform: translate(-50%, -50%);
+    text-transform: uppercase;
+    /* width: 100px; */
+}
+
+@keyframes rotate-loading {
+    0% {
+        transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+    }
+}
+
+@keyframes loading-text-opacity {
+    0% {
+        opacity: 0
+    }
+
+    20% {
+        opacity: 0
+    }
+
+    50% {
+        opacity: 1
+    }
+
+    100% {
+        opacity: 0
+    }
+}
