--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -3,22 +3,18 @@
 .layoutContainer {
   display: flex;
   /* width: 100%; */
-  height: 110px;
-  /* padding: 5px; */
+  height: 120px;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left: 20px;
   margin-top: 20px;
-  margin-bottom: 20px;
-
-  flex-direction: column;
-  flex-wrap: wrap;
-  overflow-x: scroll;
-  overflow-y: hidden;
   background-color: white;
   border: 1px solid #ececec;
 }
 
-/* 스크롤 숨기기 */
-.layoutContainer::-webkit-scrollbar {
-  display: none;
+.layoutItem {
+  margin-right: 20px;
 }
 
 .layoutSelectContainer {
@@ -397,3 +393,4 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
