[FE] modify: 기본 컴포넌트 아이템 클릭 시 디자인 수정

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -20,13 +20,17 @@
   cursor: pointer;
 }
 
-.layoutItem:hover,
+.layoutItem:hover{
+  border: 4px solid #A2A5DC;
+  border-radius: 5px;
+}
+
 .layoutItemClicked {
   border: 4px solid #A2A5DC;
   border-radius: 5px;
 }
 
-.layoutItemClicked{
+.layoutItemClicked:hover{
   border : none;
 }
 
