--- a/frontend/src/features/landing/Landing.module.css
+++ b/frontend/src/features/landing/Landing.module.css
@@ -15,6 +15,15 @@
   z-index: 1;
 }
 
+.loginImgGradient {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(137deg, #ffb7c8, #6578f2, #c2ffd8);
+  background-size: 800% 800%;
+  position: absolute;
+  z-index: 1;
+}
+
 .mainImgGradient {
   width: 100%;
   height: 100%;
@@ -41,7 +50,7 @@
 }
 
 .mainLeftBox {
-  z-index: 1;
+  z-index: 3;
 }
 
 .mainTextBox {
