--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -3,7 +3,7 @@
 .layoutContainer {
   display: flex;
   /* width: 100%; */
-  height: 120px;
+  height: 130px;
   flex-direction: row;
   justify-content: center;
   align-items: center;
@@ -16,7 +16,7 @@
 
 .layoutItem,
 .layoutItemDefault {
-  margin-right: 20px;
+  margin-right: 15px;
   cursor: pointer;
 }
 
@@ -34,7 +34,11 @@
   border : none;
 }
 
-
+.layoutSelectOneContainer {
+  display:flex;
+  flex-direction: column;
+  /* width: 100%; */
+}
 
 .layoutSelectContainer {
   display: grid;
@@ -42,6 +46,20 @@
 
   width: 100%;
   margin-top: 20px;
+}
+
+.layoutSelectContainerOne{
+
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
+  text-align: center;
+  /* width: 80%; */
+  padding-left: 150px;
+  padding-right: 150px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  /* padding-right: 20px; */
 }
 
 .checkListContainer {
