--- a/frontend/src/features/blog/Blog.module.css
+++ b/frontend/src/features/blog/Blog.module.css
@@ -144,8 +144,7 @@
     cursor: pointer;
 }
 
-/* -------------------------- */
-
+/* 로딩 컴포넌트 */
 .background {
     width: 100%;
     height: 100%;
@@ -153,7 +152,7 @@
     left: 0;
     position: fixed;
     display: block;
-    z-index: 3;
+    z-index: 999;
     text-align: center;
     overflow: hidden;
 }
