[FE] feat: 페이지 설정 조회/수정 API 연결

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -311,7 +311,8 @@
   border: 1px solid #e0e0e0;
 }
 
-.gridAddButton {
+.gridAddButton,
+.gridNonButton {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -319,6 +320,10 @@
   margin: 5px;
   border: 1px solid #e0e0e0;
   cursor: pointer;
+}
+
+.gridNonButton{
+  cursor: default;
 }
 
 .gridAddButton:hover {
