--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -13,29 +13,28 @@
   border: 1px solid #ececec;
 }
 
-
 .layoutItem,
 .layoutItemDefault {
   margin-right: 15px;
   cursor: pointer;
 }
 
-.layoutItem:hover{
-  border: 4px solid #A2A5DC;
+.layoutItem:hover {
+  border: 4px solid #a2a5dc;
   border-radius: 5px;
 }
 
 .layoutItemClicked {
-  border: 4px solid #A2A5DC;
+  border: 4px solid #a2a5dc;
   border-radius: 5px;
 }
 
-.layoutItemClicked:hover{
-  border : none;
+.layoutItemClicked:hover {
+  border: none;
 }
 
 .layoutSelectOneContainer {
-  display:flex;
+  display: flex;
   flex-direction: column;
   /* width: 100%; */
 }
@@ -48,8 +47,7 @@
   margin-top: 20px;
 }
 
-.layoutSelectContainerOne{
-
+.layoutSelectContainerOne {
   justify-content: center;
   justify-items: center;
   align-content: center;
@@ -176,12 +174,6 @@
   background-color: #f5f5f5;
   margin: auto;
   position: relative;
-}
-
-.profile_img {
-  width: 220px;
-  height: 220px;
-  border-radius: 50%;
 }
 
 .profile_editBtn {
@@ -322,7 +314,7 @@
   cursor: pointer;
 }
 
-.gridNonButton{
+.gridNonButton {
   cursor: default;
 }
 
@@ -435,4 +427,3 @@
   margin-top: 10px;
   margin-bottom: 10px;
 }
-
