--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -57,6 +57,91 @@
   background-color: white;
 }
 
+.bildProgress {
+  position: absolute;
+  border-radius: 30px;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  color: #ffffff;
+  font-size: 1.7rem;
+  font-weight: bold;
+  opacity: 1;
+  /* text-transform: uppercase; */
+}
+
+.bildProgress>span {
+  position: relative;
+  animation: anime_textup 2.5s infinite;
+}
+
+@keyframes anime_textup {
+  0% {
+    top: 0;
+  }
+
+  18% {
+    top: 0
+  }
+
+  35% {
+    top: -0.3rem;
+  }
+
+  50% {
+    top: 0
+  }
+
+  70% {
+    top: 0
+  }
+
+  85% {
+    top: 0
+  }
+
+  100% {
+    top: 0
+  }
+}
+
+.bildProgress span:nth-of-type(1) {
+  animation-delay: .1s;
+}
+
+.bildProgress span:nth-of-type(2) {
+  animation-delay: .2s;
+}
+
+.bildProgress span:nth-of-type(3) {
+  animation-delay: .3s;
+}
+
+.bildProgress span:nth-of-type(4) {
+  animation-delay: .4s;
+}
+
+.bildProgress span:nth-of-type(5) {
+  animation-delay: .5s;
+}
+
+.bildProgress span:nth-of-type(6) {
+  animation-delay: .6s;
+}
+
+.bildProgress span:nth-of-type(7) {
+  animation-delay: .7s;
+}
+
+.bildProgress span:nth-of-type(8) {
+  animation-delay: .8s;
+}
+
 .previewIframe {
   position: absolute;
   width: 100%;
@@ -78,6 +163,7 @@ iframe {
   border-radius: 0px 0px 30px 30px;
   bottom: 0;
   align-items: center;
+  z-index: 2;
 }
 
 .previewInfo>div {
