[FE] fix: 외부 테마 사용 시 게시글 작성/수정 시 카테고리 선택 못하도록 수정

--- a/frontend/src/features/post/PostWrite.module.css
+++ b/frontend/src/features/post/PostWrite.module.css
@@ -31,6 +31,13 @@
   padding: 1%;
 }
 
+.showSelectBox {
+}
+
+.hideSelectBox {
+  display: none;
+}
+
 /* PostWriteContents */
 .postWriteContents {
   position: absolute;
