--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -275,6 +275,15 @@ iframe {
   font-size: 0.5rem;
 }
 
+.infoTimer {
+  display: flex;
+  position: absolute;
+  top: 0%;
+  right: 3%;
+  transform: translate(-3%, 0%);
+  font-size: 0.5rem;
+}
+
 .dateValue {
   display: flex;
   flex-direction: column;
