--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -222,9 +222,9 @@ iframe {
   gap: 12px;
 }
 
-.infoGird_item:nth-child(3) {
-  grid-column-start: 1;
-  grid-column-end: 3;
+.infoGird_item:nth-child(4) {
+  /* grid-column-start: 1;
+  grid-column-end: 3; */
 }
 
 .infoTitle {
