--- a/frontend/src/features/dashboard/Dashboard.module.css
+++ b/frontend/src/features/dashboard/Dashboard.module.css
@@ -25,7 +25,7 @@
 
 /* 달력 */
 .calendar {
-  background-color: #393D96;
+  background-color: #393d96;
   width: 100%;
   height: 100%;
   color: white;
@@ -37,13 +37,13 @@
 
 .calendarDiv {
   width: 90%;
-  background: #4A4DA8;
+  background: #4a4da8;
   border-radius: 12px;
   padding: 10px 20px;
   margin: 3px 0px;
 }
 
-.calendarDiv>div {
+.calendarDiv > div {
   height: 41vh;
 }
 
@@ -75,7 +75,7 @@
   /* text-transform: uppercase; */
 }
 
-.bildProgress>span {
+.bildProgress > span {
   position: relative;
   animation: anime_textup 2.5s infinite;
 }
@@ -86,7 +86,7 @@
   }
 
   18% {
-    top: 0
+    top: 0;
   }
 
   35% {
@@ -94,58 +94,59 @@
   }
 
   50% {
-    top: 0
+    top: 0;
   }
 
   70% {
-    top: 0
+    top: 0;
   }
 
   85% {
-    top: 0
+    top: 0;
   }
 
   100% {
-    top: 0
+    top: 0;
   }
 }
 
 .bildProgress span:nth-of-type(1) {
-  animation-delay: .1s;
+  animation-delay: 0.1s;
 }
 
 .bildProgress span:nth-of-type(2) {
-  animation-delay: .2s;
+  animation-delay: 0.2s;
 }
 
 .bildProgress span:nth-of-type(3) {
-  animation-delay: .3s;
+  animation-delay: 0.3s;
 }
 
 .bildProgress span:nth-of-type(4) {
-  animation-delay: .4s;
+  animation-delay: 0.4s;
 }
 
 .bildProgress span:nth-of-type(5) {
-  animation-delay: .5s;
+  animation-delay: 0.5s;
 }
 
 .bildProgress span:nth-of-type(6) {
-  animation-delay: .6s;
+  animation-delay: 0.6s;
 }
 
 .bildProgress span:nth-of-type(7) {
-  animation-delay: .7s;
+  animation-delay: 0.7s;
 }
 
 .bildProgress span:nth-of-type(8) {
-  animation-delay: .8s;
+  animation-delay: 0.8s;
 }
 
 .previewIframe {
   position: absolute;
   width: 100%;
   height: 100%;
+  border-radius: 30px;
 }
 
 iframe {
@@ -166,7 +167,7 @@ iframe {
   z-index: 2;
 }
 
-.previewInfo>div {
+.previewInfo > div {
   padding: 5px 30px;
 }
 
@@ -187,11 +188,11 @@ iframe {
   border-radius: 30px;
 }
 
-.list>div {
+.list > div {
   width: 100%;
 }
 
-.list>div>div {
+.list > div > div {
   padding: 0px 35px;
 }
 
@@ -201,15 +202,15 @@ iframe {
 
 .listOne {
   margin-top: 20px;
-  border-bottom: 1px solid #E3E3E3;
+  border-bottom: 1px solid #e3e3e3;
 }
 
 /* 블로그 정보 */
 .info {
-  background-color: #D6E5F3;
+  background-color: #d6e5f3;
 }
 
-.info>div {
+.info > div {
   width: 91%;
   height: 91%;
 }
@@ -234,11 +235,10 @@ iframe {
 
 .infoTitle {
   white-space: pre-line;
-  background: #F1F8FF;
+  background: #f1f8ff;
   border-radius: 15px 15px 0px 0px;
   padding: 10px;
 }
-
 
 .infoVolume {
   display: flex;
@@ -246,7 +246,7 @@ iframe {
   justify-content: flex-end;
 }
 
-.infoVolume>.icon {
+.infoVolume > .icon {
   padding: 0px 6px 0px 23px;
   font-size: 1rem;
 }
@@ -259,7 +259,7 @@ iframe {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #FFFFFF;
+  background: #ffffff;
   height: 10.7vh;
   border-radius: 0px 0px 15px 15px;
 }
@@ -310,21 +310,20 @@ iframe {
   background-color: "#8ba8bd";
 }
 
-
 /* 페이지 이동 */
 .menuBox {
   height: 20vh;
-  background-color: #E2E2F3;
+  background-color: #e2e2f3;
   border-radius: 20px;
 }
 
-.menuBox>div {
+.menuBox > div {
   display: flex;
   padding: 20px;
 }
 
 .menuText {
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 10px;
   padding: 10px 40px;
 }
