--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -41,7 +41,7 @@
 
 .layoutSelectContainer {
   display: grid;
-  grid-template-columns: 0.8fr 2.2fr;
+  grid-template-columns: 1.2fr 2.8fr;
 
   width: 100%;
   margin-top: 20px;
@@ -64,6 +64,7 @@
   display: flex;
   flex-direction: column;
   border: 2px solid #ececec;
+  margin-right: 10px;
 }
 
 .checkListTitle {
@@ -424,6 +425,7 @@
 }
 
 .textPaddingSm {
-  margin-top: 10px;
+  margin-top: 15px;
+  margin-left: 10px;
   margin-bottom: 10px;
 }
