[FE] design: 세부 레이아웃 컴포넌트 기본 테두리색 설정

--- a/frontend/src/features/setting/Setting.module.css
+++ b/frontend/src/features/setting/Setting.module.css
@@ -111,6 +111,7 @@
   margin: 10px;
   /* background-color: #d3d3eb; */
   border-radius: 5px;
+  border: 1px solid #ececec;
 }
 
 .layout_colored {
