--- a/frontend/src/features/post/PostWrite.module.css
+++ b/frontend/src/features/post/PostWrite.module.css
@@ -42,10 +42,17 @@
 .postWriteContents {
   position: absolute;
   right: -7%;
-  border: 1px solid #a2a5dc;
-  width: 73vw;
-  height: 75vh;
-  padding: 1%;
+  /* border: 1px solid #a2a5dc; */
+  /* width: 73vw;
+  height: 75vh; */
+  width: 75vw;
+  height: 78vh;
+  /* padding: 1%; */
+}
+
+.postEditor {
+  width: 100%;
+  height: 100%;
 }
 
 /* PageViewerContents */
