--- a/frontend/src/features/post/Post.module.css
+++ b/frontend/src/features/post/Post.module.css
@@ -25,7 +25,7 @@
 .textCategories {
   position: absolute;
   width: 13.5vw;
-  height: 4vh;
+  height: 4.5vh;
   line-height: 4vh;
   background-color: #f1f8ff;
   text-align: center;
@@ -49,8 +49,9 @@
 .categoryName {
   cursor: pointer;
   color: #000000;
-  padding-top: 2%;
+  /* padding-top: 2%; */
   padding-bottom: 2%;
+  padding-left: 2%;
 }
 
 /* PostList */
@@ -65,11 +66,16 @@
 
 .postSettings {
   margin-bottom: 1%;
+  padding-top: 0.5%;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
+  padding-bottom: 0.5%;
 }
 
 .postDataList {
   width: 100%;
   height: 88%;
+  padding: 0.5%;
   /* display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -92,6 +98,13 @@
   padding: 2%;
   margin-top: 1%;
   text-align: center;
+}
+
+.postListLoading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 /* PostListCard */
