--- a/frontend/src/features/post/Post.module.css
+++ b/frontend/src/features/post/Post.module.css
@@ -25,8 +25,8 @@
 .textCategories {
   position: absolute;
   width: 13.5vw;
-  height: 4.5vh;
-  line-height: 4vh;
+  height: 5.5vh;
+  line-height: 5vh;
   background-color: #f1f8ff;
   text-align: center;
   top: 2%;
@@ -48,18 +48,35 @@
 
 .categoryName {
   cursor: pointer;
-  color: #000000;
-  /* padding-top: 2%; */
-  padding-bottom: 2%;
-  padding-left: 2%;
+  color: #A4A4A4;  
+  margin:0;
+  padding: 6% 0 6% 0;
+  border-bottom: 0.5px solid lightgray;
 }
+
+.categoryNameTextClicked,
+.categoryNameTextNonClicked {
+  padding-left: 5%;
+  margin:0;
+}
+
+.categoryNameTextClicked:hover,
+.categoryNameTextNonClicked:hover,
+.categoryNameTextClicked{
+  color: black;
+}
+
+.categoryNameTextNonClicked {
+  color: #A4A4A4;
+}
+
 
 /* PostList */
 .postList {
   position: absolute;
   right: 0;
   width: 65vw;
-  height: 70vh;
+  height: 80vh;
   background-color: #d6e5f3;
   padding: 1%;
 }
