--- a/frontend/src/features/post/Post.module.css
+++ b/frontend/src/features/post/Post.module.css
@@ -38,9 +38,9 @@
 .myCategoryList {
   position: absolute;
   width: 13.5vw;
-  height: 62vh;
+  height: 62.5vh;
   background-color: #ffffff;
-  top: 76%;
+  top: 77%;
   left: 50%;
   transform: translate(-50%, -76%);
   padding: 0.5%;
@@ -48,8 +48,8 @@
 
 .categoryName {
   cursor: pointer;
-  color: #A4A4A4;  
-  margin:0;
+  color: #a4a4a4;
+  margin: 0;
   padding: 6% 0 6% 0;
   border-bottom: 0.5px solid lightgray;
 }
@@ -57,19 +57,18 @@
 .categoryNameTextClicked,
 .categoryNameTextNonClicked {
   padding-left: 5%;
-  margin:0;
+  margin: 0;
 }
 
 .categoryNameTextClicked:hover,
 .categoryNameTextNonClicked:hover,
-.categoryNameTextClicked{
+.categoryNameTextClicked {
   color: black;
 }
 
 .categoryNameTextNonClicked {
-  color: #A4A4A4;
+  color: #a4a4a4;
 }
-
 
 /* PostList */
 .postList {
@@ -78,7 +77,7 @@
   width: 65vw;
   height: 80vh;
   background-color: #d6e5f3;
-  padding: 1%;
+  padding: 0 1% 1% 1%;
 }
 
 .postSettings {
@@ -115,6 +114,10 @@
   padding: 2%;
   margin-top: 1%;
   text-align: center;
+}
+
+.moreListBtn:hover {
+  background: #f1f8ff;
 }
 
 .postListLoading {
