--- a/frontend/src/features/post/Post.module.css
+++ b/frontend/src/features/post/Post.module.css
@@ -75,9 +75,9 @@
   position: absolute;
   right: 0;
   width: 65vw;
-  height: 80vh;
+  height: 70vh;
   background-color: #d6e5f3;
-  padding: 0 1% 1% 1%;
+  padding: 1%;
 }
 
 .postSettings {
@@ -89,9 +89,10 @@
 }
 
 .postDataList {
-  width: 100%;
-  height: 88%;
-  padding: 0.5%;
+  width: 99%;
+  height: 100%;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
   /* display: flex;
   flex-direction: row;
   justify-content: flex-start;
