[FE] refactor: 전체 페이지 너비 설정 및 css 리팩토링

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ body {
   display: none;
 }
 
-/* code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
+#root {
+  height: 100vh;
+  width: 100vw;
+}
