--- a/frontend/src/styles/Post.module.css
+++ b/frontend/src/styles/Post.module.css
@@ -5,6 +5,33 @@
   margin-bottom: 5vh;
 }
 
+.postListContainer {
+  width: 83vw;
+  height: 100%;
+  margin: 0 auto;
+}
+
+.postListTitle {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 0 5em 1em 5em;
+  box-sizing: border-box;
+}
+
+.postListTitle > div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+  gap: 0.7em;
+}
+
+.postListContents {
+  display: grid;
+  grid-template-columns: 2fr 8fr;
+}
+
 /* PostCategoryList */
 .categoryList {
   width: 100%;
