[FE] feat: 임시저장 버튼 컴포넌트 수정 및 자동저장 alert 생성

--- a/frontend/src/styles/PostWrite.module.css
+++ b/frontend/src/styles/PostWrite.module.css
@@ -166,7 +166,18 @@
   top: 1.2em;
 }
 
-.temp_button {
+.temp__button {
+  display: flex;
+  align-items: center;
+  gap: 0.5em;
+}
+
+.temp__button > div {
+  border-left: 1px solid #a4a4a4;
+  height: 1em;
+}
+
+.temp__button--save {
   display: flex;
   justify-content: center;
   gap: 1em;
